--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Frontend Environment Configuration
-NEXT_PUBLIC_API_URL=https://localhost:5000/api
+NEXT_PUBLIC_API_URL=https://chemurgic-scalably-selena.ngrok-free.dev/api
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=your-google-client-id-here
 NEXT_PUBLIC_GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
 
